# algorithms

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
algorithms/: CMakeLists.txt
algorithms/include/algorithms/searching/: binary_search.h
algorithms/src/searching/: binary_search.c
include/algorithms/: error_code.h
include/algorithms/bits/: bits.h
include/algorithms/bytes/: endianness.h
include/algorithms/number/: prime.h  swap.h
include/algorithms/searching/: binary_search.h
include/algorithms/sorting/: mergesort.h  quicksort.h  radix.h
include/algorithms/string/: permutation.h  reverse.h  strlen.h  unique.h
include/helper/: array.h
include/searching/: binary_search.h
include/structures/: bit_array.h
src/algorithms/bits/: bits.c
src/algorithms/bytes/: endianness.c
src/algorithms/number/: prime.c  swap.c
src/algorithms/searching/: binary_search.c
src/algorithms/sorting/: mergesort.c  quicksort.c  radix.c
src/algorithms/string/: permutation.c  reverse.c  strlen.c  unique.c
src/helper/: array.c
src/number/: swap.c
src/searching/: binary_search.c
src/string/: reverse.c
src/structures/: bit_array.c
tests/unit/: CMakeLists.txt
tests/unit/src/algorithms/bits/: bits.cpp  bits_test.cpp
tests/unit/src/algorithms/bytes/: endianness_test.cpp
tests/unit/src/algorithms/number/: prime.cpp  swap.cpp
tests/unit/src/algorithms/searching/: binary_search.cpp
tests/unit/src/algorithms/sorting/: mergesort.cpp  radix.cpp
tests/unit/src/algorithms/string/: permutation.cpp  reverse.cpp  strlen.cpp  unique.cpp
tests/unit/src/number/: swap.cpp
tests/unit/src/searching/: binary_search.cpp
tests/unit/src/sorting/: quicksort.cpp
tests/unit/src/string/: reverse.cpp  strlen.cpp
tests/unit/src/structures/: bit_array.cpp
